--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <title>Te Tai Hou Teams – 2025</title>
 
 <style>
+/* --- General page setup --- */
 body {
   font-family: "Segoe UI", Roboto, sans-serif;
   background-color: #f9fafb;
@@ -15,11 +16,15 @@ body {
   display: flex;
   justify-content: center;
 }
+
+/* --- Page wrapper centered --- */
 #page-wrapper {
   width: 100%;
   max-width: 75%;
   min-width: 320px;
 }
+
+/* --- Header --- */
 header {
   display: flex;
   align-items: center;
@@ -36,6 +41,8 @@ header h1 {
   margin: 0;
   color: #1a365d;
 }
+
+/* --- Controls --- */
 .controls {
   display: flex;
   justify-content: center;
@@ -65,6 +72,8 @@ header h1 {
 .controls button:hover {
   background-color: #1e4e8c;
 }
+
+/* --- Group containers --- */
 section {
   margin-bottom: 1rem;
   border-radius: 0.75rem;
@@ -91,6 +100,8 @@ section {
 .group-content.hidden {
   display: none;
 }
+
+/* --- Table --- */
 table {
   width: 100%;
   border-collapse: collapse;
@@ -113,20 +124,39 @@ tbody td {
 tbody tr:hover {
   background: #f9fafb;
 }
-td:not(:last-child),
-th:not(:last-child) {
+th::after {
+  content: '';
+}
+
+/* === COLUMN WRAPPING RULES === */
+td:not(:nth-last-child(-n+3)),
+th:not(:nth-last-child(-n+3)) {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
-td:last-child,
-th:last-child {
+td:nth-last-child(-n+3),
+th:nth-last-child(-n+3) {
   white-space: normal;
 }
+
+/* --- Specific column widths --- */
 td:nth-child(2),
 th:nth-child(2) {
-  width: 30%;
+  width: 30%; /* Email column wider */
 }
+th:nth-last-child(3),
+td:nth-last-child(3), /* Paid */
+th:nth-last-child(2),
+td:nth-last-child(2), /* Cleared */
+th:nth-last-child(1),
+td:nth-last-child(1)  /* GD Regist. */
+{
+  min-width: 60px;
+  text-align: center;
+}
+
+/* --- Responsive --- */
 @media (max-width: 768px) {
   #page-wrapper {
     max-width: 100%;
@@ -158,171 +188,239 @@ th:nth-child(2) {
 
 <body>
 <div id="page-wrapper">
-  <header>
-    <a href="https://www.poriruaheatbasketball.org" target="_blank">
-      <img src="images/logo.png" alt="Porirua Heat Logo">
-    </a>
-    <h1>TE TAI HOU TEAMS – 2025 TERM 4</h1>
-  </header>
+<header style="text-align: center; margin-bottom: 24px;">
+  <a href="https://www.poriruaheatbasketball.org" target="_blank">
+    <img src="images/logo.png" alt="Porirua Heat Logo" style="height: 60px; border-radius: 50%; margin-bottom: 12px;">
+  </a>
+  <h1 style="font-size: 1.8em; margin: 0; color: #1a365d;">TE TAI HOU TEAMS – 2025 TERM 4</h1>
+</header>
 
-  <div class="controls">
-    <input id="search" type="text" placeholder="Search...">
-    <select id="selectionFilter">
-      <option value="">All Teams</option>
-    </select>
-    <select id="clearedFilter">
-      <option value="">All Cleared</option>
-      <option value="Cleared">Cleared</option>
-      <option value="Not Cleared">Not Cleared</option>
-      <option value="(Blank)">(Blank)</option>
-    </select>
-    <select id="gdFilter">
-      <option value="">All GD Regist.</option>
-      <option value="Yes">Yes</option>
-      <option value="No">No</option>
-      <option value="(Blank)">(Blank)</option>
-    </select>
-    <button id="export">Export CSV</button>
-    <button id="toggleGroups">Collapse All</button>
-  </div>
+<div class="controls">
+  <input id="search" type="text" placeholder="Search...">
+  <select id="selectionFilter"><option value="">All Teams</option></select>
+  <select id="clearedFilter"><option value="">All Cleared</option></select>
+  <select id="gdRegFilter"><option value="">All GD Regist.</option></select>
+  <button id="export">Export CSV</button>
+  <button id="toggleGroups">Collapse All</button>
+</div>
 
-  <div style="margin-top: 6px;">
-    <a href="https://limonza.github.io/te-tai-hou-teams-2025/Training.html" style="font-size: 1em; color: #2b6cb0; text-decoration: underline;">
-      Confirmed Club Registrations
-    </a>
-  </div>
+<div style="margin-top: 6px;">
+  <a href="https://limonza.github.io/te-tai-hou-teams-2025/Training.html" style="font-size: 1em; color: #2b6cb0; text-decoration: underline;">
+    Confirmed Club Registrations
+  </a>
+</div>
 
-  <div id="table-container"></div>
+<div id="table-container"></div>
 </div>
 
 <script>
-const data = [
-  { fullName: "John Doe", email: "john@example.com", contact: "021111111", selection: "U15 Boys", paid: "Yes", cleared: "Cleared", gdRegist: "" },
-  { fullName: "Jane Smith", email: "jane@example.com", contact: "022222222", selection: "U15 Boys", paid: "No", cleared: "", gdRegist: "Yes" },
-  { fullName: "Alice Brown", email: "alice@example.com", contact: "023333333", selection: "U17 Girls", paid: "Yes", cleared: "Not Cleared", gdRegist: "No" },
-  { fullName: "Ben White", email: "ben@example.com", contact: "024444444", selection: "U17 Girls", paid: "No", cleared: "", gdRegist: "" }
+const search = document.getElementById('search');
+const selectionFilter = document.getElementById('selectionFilter');
+const clearedFilter = document.getElementById('clearedFilter');
+const gdRegFilter = document.getElementById('gdRegFilter');
+const container = document.getElementById('table-container');
+const exportBtn = document.getElementById('export');
+const toggleGroupsBtn = document.getElementById('toggleGroups');
+
+let headers = [];
+let allRows = [];
+let indicativeIndex = -1;
+let clearedIndex = -1;
+let gdRegIndex = -1;
+
+const groupOrder = [
+  "10U Dev","10U Elite","12U Dev","12U Elite",
+  "14U Black","14U Orange","14U Blaze","14U Flames",
+  "16U Dev","16U Elite","20U","Mens","Womens"
 ];
 
-const tableContainer = document.getElementById("table-container");
-const searchInput = document.getElementById("search");
-const selectionFilter = document.getElementById("selectionFilter");
-const clearedFilter = document.getElementById("clearedFilter");
-const gdFilter = document.getElementById("gdFilter");
-const toggleGroupsBtn = document.getElementById("toggleGroups");
+// --- Load CSV ---
+fetch('teams.csv')
+  .then(res => res.text())
+  .then(text => {
+    const lines = text.trim().split('\n').map(l => l.split(','));
+    headers = lines[0].map(h => h.trim());
+    indicativeIndex = headers.findIndex(h => h.toLowerCase() === 'indicative selection');
+    clearedIndex = headers.findIndex(h => h.toLowerCase() === 'cleared');
+    gdRegIndex = headers.findIndex(h => h.toLowerCase() === 'gd regist.');
 
-let groupsCollapsed = false;
+    allRows = lines.slice(1).map(r => r.map(c => c.trim()))
+      .filter(r => r[indicativeIndex] && r[indicativeIndex] !== '');
 
-function renderTable() {
-  const searchValue = searchInput.value.toLowerCase();
-  const selectionValue = selectionFilter.value;
-  const clearedValue = clearedFilter.value;
-  const gdValue = gdFilter.value;
-
-  const filtered = data.filter(d => {
-    const matchSearch =
-      d.fullName.toLowerCase().includes(searchValue) ||
-      d.email.toLowerCase().includes(searchValue) ||
-      d.contact.toLowerCase().includes(searchValue);
-
-    const matchSelection = selectionValue === "" || d.selection === selectionValue;
-
-    const matchCleared =
-      clearedValue === "" ||
-      (clearedValue === "(Blank)" && (!d.cleared || d.cleared.trim() === "")) ||
-      d.cleared === clearedValue;
-
-    const matchGD =
-      gdValue === "" ||
-      (gdValue === "(Blank)" && (!d.gdRegist || d.gdRegist.trim() === "")) ||
-      d.gdRegist === gdValue;
-
-    return matchSearch && matchSelection && matchCleared && matchGD;
+    populateDropdowns();
+    renderGroups(allRows);
   });
 
-  const grouped = {};
-  filtered.forEach(d => {
-    if (!grouped[d.selection]) grouped[d.selection] = [];
-    grouped[d.selection].push(d);
+// --- Populate dropdowns ---
+function populateDropdowns() {
+  const teamValues = [...new Set(allRows.map(r => r[indicativeIndex]))];
+  const clearedValues = [...new Set(allRows.map(r => r[clearedIndex] || '(Blank)'))];
+  const gdRegValues = [...new Set(allRows.map(r => r[gdRegIndex] || '(Blank)'))];
+
+  const orderedTeams = groupOrder.concat(teamValues.filter(v => !groupOrder.includes(v)));
+  orderedTeams.forEach(v => {
+    const opt = document.createElement('option');
+    opt.value = v;
+    opt.textContent = v;
+    selectionFilter.appendChild(opt);
   });
 
-  let html = "";
-  Object.keys(grouped).forEach(group => {
-    html += `<section>
-      <div class="group-header">${group} <span>${grouped[group].length}</span></div>
-      <div class="group-content ${groupsCollapsed ? 'hidden' : ''}">
-        <table>
-          <thead><tr>
-            <th>Full Name</th>
-            <th>Email</th>
-            <th>Contact Number</th>
-            <th>Indicative Selection</th>
-            <th>Paid</th>
-            <th>Cleared</th>
-            <th>GD Regist.</th>
-          </tr></thead>
-          <tbody>
-          ${grouped[group].map(d => `
-            <tr>
-              <td data-label="Full Name">${d.fullName}</td>
-              <td data-label="Email">${d.email}</td>
-              <td data-label="Contact Number">${d.contact}</td>
-              <td data-label="Indicative Selection">${d.selection}</td>
-              <td data-label="Paid">${d.paid}</td>
-              <td data-label="Cleared">${d.cleared || ""}</td>
-              <td data-label="GD Regist.">${d.gdRegist || ""}</td>
-            </tr>`).join("")}
-          </tbody>
-        </table>
-      </div>
-    </section>`;
+  clearedValues.forEach(v => {
+    const opt = document.createElement('option');
+    opt.value = v;
+    opt.textContent = v;
+    clearedFilter.appendChild(opt);
   });
 
-  tableContainer.innerHTML = html;
+  gdRegValues.forEach(v => {
+    const opt = document.createElement('option');
+    opt.value = v;
+    opt.textContent = v;
+    gdRegFilter.appendChild(opt);
+  });
+}
 
-  document.querySelectorAll(".group-header").forEach(header => {
-    header.addEventListener("click", () => {
-      const content = header.nextElementSibling;
-      content.classList.toggle("hidden");
+// --- Render groups ---
+function renderGroups(rows) {
+  container.innerHTML = '';
+
+  const groups = rows.reduce((acc, row) => {
+    const key = row[indicativeIndex];
+    if (!acc[key]) acc[key] = [];
+    acc[key].push(row);
+    return acc;
+  }, {});
+
+  const filterVal = selectionFilter.value;
+  const allGroupKeys = Object.keys(groups);
+  const visibleKeys = filterVal
+    ? [filterVal]
+    : [...groupOrder.filter(g => allGroupKeys.includes(g)), ...allGroupKeys.filter(k => !groupOrder.includes(k))];
+
+  visibleKeys.forEach(groupName => {
+    const groupRows = groups[groupName];
+    if (!groupRows?.length) return;
+
+    const section = document.createElement('section');
+    const header = document.createElement('div');
+    header.className = 'group-header';
+    header.innerHTML = `<span>${groupName}</span><span>(${groupRows.length}) ▼</span>`;
+    section.appendChild(header);
+
+    const wrapper = document.createElement('div');
+    wrapper.className = 'group-content';
+
+    const table = document.createElement('table');
+    const thead = document.createElement('thead');
+    const headerRow = document.createElement('tr');
+
+    headers.forEach((h, i) => {
+      if (i === indicativeIndex) return;
+      const th = document.createElement('th');
+      th.textContent = h;
+      headerRow.appendChild(th);
+    });
+    thead.appendChild(headerRow);
+    table.appendChild(thead);
+
+    const tbody = document.createElement('tbody');
+    groupRows.forEach(r => {
+      const tr = document.createElement('tr');
+      r.forEach((c, i) => {
+        if (i === indicativeIndex) return;
+        const td = document.createElement('td');
+        td.textContent = c || ''; // show empty cells
+        td.setAttribute('data-label', headers[i]);
+        tr.appendChild(td);
+      });
+      tbody.appendChild(tr);
+    });
+
+    table.appendChild(tbody);
+    wrapper.appendChild(table);
+    section.appendChild(wrapper);
+    container.appendChild(section);
+
+    header.addEventListener('click', () => {
+      wrapper.classList.toggle('hidden');
+      const arrow = header.querySelector('span:last-child');
+      arrow.textContent = wrapper.classList.contains('hidden')
+        ? `(${groupRows.length}) ▲`
+        : `(${groupRows.length}) ▼`;
     });
   });
 }
 
-function populateFilters() {
-  const selections = [...new Set(data.map(d => d.selection))].sort();
-  selections.forEach(sel => {
-    const opt = document.createElement("option");
-    opt.value = sel;
-    opt.textContent = sel;
-    selectionFilter.appendChild(opt);
+// --- Search & Filter ---
+function applyFilters() {
+  const q = search.value.toLowerCase();
+  const sel = selectionFilter.value;
+  const cleared = clearedFilter.value;
+  const gdReg = gdRegFilter.value;
+
+  const filtered = allRows.filter(r => {
+    const matchesSearch = r.some(c => (c || '').toLowerCase().includes(q));
+    const matchesSel = !sel || r[indicativeIndex] === sel;
+
+    const cellCleared = r[clearedIndex] || '';
+    const matchesCleared = cleared === '' ? true
+      : (cleared === '(Blank)' ? cellCleared === '' : cellCleared === cleared);
+
+    const cellGD = r[gdRegIndex] || '';
+    const matchesGD = gdReg === '' ? true
+      : (gdReg === '(Blank)' ? cellGD === '' : cellGD === gdReg);
+
+    return matchesSearch && matchesSel && matchesCleared && matchesGD;
   });
+
+  renderGroups(filtered);
 }
 
-searchInput.addEventListener("input", renderTable);
-selectionFilter.addEventListener("change", renderTable);
-clearedFilter.addEventListener("change", renderTable);
-gdFilter.addEventListener("change", renderTable);
-toggleGroupsBtn.addEventListener("click", () => {
-  groupsCollapsed = !groupsCollapsed;
-  renderTable();
-});
+search.addEventListener('input', applyFilters);
+selectionFilter.addEventListener('change', applyFilters);
+clearedFilter.addEventListener('change', applyFilters);
+gdRegFilter.addEventListener('change', applyFilters);
 
-document.getElementById("export").addEventListener("click", () => {
-  const rows = [["Full Name","Email","Contact","Indicative Selection","Paid","Cleared","GD Regist."]];
-  const currentRows = tableContainer.querySelectorAll("tbody tr");
-  currentRows.forEach(tr => {
-    const cells = Array.from(tr.children).map(td => td.innerText);
-    rows.push(cells);
+// --- Export visible ---
+exportBtn.addEventListener('click', () => {
+  const rows = [];
+  const visibleHeaders = headers.filter((_, i) => i !== indicativeIndex);
+  rows.push(visibleHeaders.join(','));
+  container.querySelectorAll('section').forEach(section => {
+    const wrapper = section.querySelector('.group-content');
+    if (wrapper.classList.contains('hidden')) return;
+    wrapper.querySelectorAll('tbody tr').forEach(tr => {
+      const cells = Array.from(tr.children).map(td => td.textContent);
+      rows.push(cells.join(','));
+    });
   });
-  const csv = rows.map(r => r.map(x => `"${x}"`).join(",")).join("\n");
-  const blob = new Blob([csv], {type: "text/csv"});
-  const link = document.createElement("a");
+  const blob = new Blob([rows.join('\n')], { type: 'text/csv;charset=utf-8;' });
+  const link = document.createElement('a');
   link.href = URL.createObjectURL(blob);
-  link.download = "TeTaiHouTeams2025.csv";
+  link.download = 'filtered_data.csv';
   link.click();
 });
 
-populateFilters();
-renderTable();
+// --- Expand / Collapse All ---
+toggleGroupsBtn.addEventListener('click', () => {
+  const allGroups = container.querySelectorAll('.group-content');
+  const anyOpen = Array.from(allGroups).some(g => !g.classList.contains('hidden'));
+
+  allGroups.forEach(groupContent => {
+    const section = groupContent.parentElement;
+    const header = section.querySelector('.group-header span:last-child');
+    const count = groupContent.querySelectorAll('tbody tr').length;
+    if (anyOpen) {
+      groupContent.classList.add('hidden');
+      header.textContent = `(${count}) ▲`;
+    } else {
+      groupContent.classList.remove('hidden');
+      header.textContent = `(${count}) ▼`;
+    }
+  });
+
+  toggleGroupsBtn.textContent = anyOpen ? 'Expand All' : 'Collapse All';
+});
 </script>
 </body>
 </html>
